Fix spacing on Crossroads logo

--- a/app/scss/modules/nav.scss
+++ b/app/scss/modules/nav.scss
@@ -130,7 +130,7 @@ header.show .container {
 
 
 .navbar-brand {
-  padding: 15px 10px 0px 10px;
+  padding: 15px 0px;
 }
 
 .navbar-header{
